# Storcke64Basic

./: .gitignore  .gitlab-ci.yml  AUTHORS  INSTALL  Makefile.am  README  README.md  VERSION  acinclude.m4  com.Storcke64.Storcke64Basic.yaml  component.am  configure.ac  test-fast  version.m4
gb.cairo/: configure.ac
gb.cairo/src/: c_cairo.c  c_cairo.h  c_surface.c  c_surface.h  main.c  main.h
gb.compress.zstd/: Makefile.am  configure.ac
gb.compress.zstd/src/: Makefile.am  gb.compress.zstd.component  main.c  main.h
gb.db.mysql/: configure.ac
gb.db.mysql/src/: main.c  main.h
gb.db.sqlite3/: configure.ac
gb.db.sqlite3/src/: gb_buffer.c  gb_buffer.h  helper.c  helper.h  main.c  main.h
gb.dbus/: configure.ac
gb.dbus/src/: c_dbus.c  c_dbus.h  c_dbusconnection.c  c_dbusconnection.h  c_dbusobserver.c  c_dbusobserver.h  c_dbusvariant.c  c_dbusvariant.h  dbus_print_message.c  dbus_print_message.h  helper.c  helper.h  main.c  main.h
gb.dbus/src/gb.dbus/: .project
gb.desktop.gnome.keyring/: configure.ac
gb.desktop.gnome.keyring/src/: keyring.c  keyring.h  main.c  main.h
gb.desktop.x11/: configure.ac
gb.desktop.x11/src/: c_x11.c  c_x11.h  c_x11systray.c  c_x11systray.h  gb.desktop.x11.component  main.c  main.h  x11.c  x11.h
gb.desktop.x11/src/gb.desktop.x11/: .project
gb.desktop.x11/src/systray/: systray.c  systray.h  tray.c  tray.h
gb.form.htmlview/: Makefile.am  configure.ac  gb.image.h
gb.form.htmlview/src/: Makefile.am  c_htmldocument.cpp  c_htmldocument.h  gb.form.htmlview.component  main.cpp  main.h
gb.form.htmlview/src/gb.form.htmlview/: .component  .project  master.css  test.html  test3.html  test5.html  test6.html
gb.form.htmlview/src/litehtml/: document.h  html.cpp  html.h  os_types.h
gb.gmp/: configure.ac
gb.gmp/src/: c_bigint.c  c_bigint.h  c_rational.c  c_rational.h  main.c  main.h
gb.gsl/: configure.ac
gb.gsl/src/: Makefile.am  c_complex.c  c_float_array.c  c_float_array.h  c_gsl.c  c_gsl.h  c_matrix.c  c_matrix.h  c_vector.c  c_vector.h  main.c
gb.gtk3/: configure.ac
gb.gtk3/src/: CPanel.cpp  CPanel.h  Makefile.am  canimation.cpp  canimation.h  gb.gtk.patch.h  gb.gtk.platform.h  gpanel.cpp  gpanel.h  main.cpp  main.h
gb.gtk3/src/opengl/: Makefile.am  c_glarea.c  c_glarea.h  gb.gtk3.opengl.component  main.c  main.h
gb.gtk3/src/wayland/: main.c  main.h
gb.gtk3/src/webview/: c_websettings.c  c_websettings.h  c_webview.c  c_webview.h  main.c  main.h
gb.gtk3/src/x11/: main.c  main.h
gb.image.imlib/: configure.ac
gb.image.imlib/src/: c_image.c  c_image.h  c_imlib.c  c_imlib.h  main.c  main.h
gb.image.io/: configure.ac
gb.image.io/src/: c_image.c  c_image.h  main.c  main.h
gb.media/: configure.ac
gb.media/src/: c_media.c  c_media.h  c_mediaplayer.c  c_mediaplayer.h  c_mediavideo.c  c_mediavideo.h  main.c  main.h
gb.net/: configure.ac
gb.net.curl/: configure.ac
gb.net.curl/src/: CCurl.c  CHttpClient.c
gb.net.curl/src/gb.net.curl/: .project
gb.net/src/: CSerialPort.c  CServerSocket.c  CServerSocket.h  CSocket.c  CSocket.h  CUdpSocket.c  speed.c  speed.h
gb.openal/: configure.ac
gb.openal/src/: c_al.c  c_al.h  c_alc.c  c_alc.h  c_alure.c  c_alure.h  main.c  main.h
gb.opengl/: configure.ac
gb.opengl/src/glu/: cglunurb.c  cglunurb.h  cgluquadric.c  cgluquadric.h
gb.opengl/src/sge/: cmd2object.h
gb.pcre/: configure.ac
gb.pcre/src/: Makefile.am  gb.pcre.h  main.c  main.h  regexp.c  regexp.h  regexp2.c  regexp2.h
gb.pdf/: configure.ac
gb.pdf/src/: CPdfDocument.cpp  Makefile.am
gb.poppler/: configure.ac
gb.poppler/src/: Makefile.am  c_pdf_document.cpp  c_pdf_document.h  gb.poppler.component  main.cpp  main.h
gb.sdl.sound/: configure.ac
gb.sdl.sound/src/: main.c  main.h  sound.c  sound.h
main/: Makefile.am  configure.ac
main/gbc/: Makefile.am  gb_alloc.c  gb_common.c  gb_error.c  gb_error.h  gb_file.c  gb_file.h  gb_str.c  gb_str.h  gb_table.c  gba.c  gbc.c  gbc_arch.c  gbc_archive.c  gbc_archive.h  gbc_chown.c  gbc_chown.h  gbc_class.c  gbc_class.h  gbc_code.c  gbc_compile.c  gbc_compile.h  gbc_dump.c  gbc_form.c  gbc_form.h  gbc_form_webpage.c  gbc_header.c  gbc_header.h  gbc_help.c  gbc_help.h  gbc_output.c  gbc_output.h  gbc_pcode.c  gbc_preprocess.c  gbc_preprocess.h  gbc_read.c  gbc_read.h  gbc_reserved.c  gbc_reserved_make.c  gbc_trans.c  (+10 more)
main/gbx/: Makefile.am  gb.jit.h  gb_alloc.c  gb_array.c  gb_buffer.c  gb_common.c  gb_common_check.h  gb_error.c  gb_error.h  gb_file.c  gb_file.h  gb_hash.c  gb_table.c  gbx.c  gbx.h  gbx_api.c  gbx_api.h  gbx_archive.c  gbx_archive.h  gbx_c_application.c  gbx_c_application.h  gbx_c_array.c  gbx_c_array.h  gbx_c_class.c  gbx_c_class.h  gbx_c_collection.c  gbx_c_collection.h  gbx_c_enum.c  gbx_c_enum.h  gbx_c_error.c  gbx_c_error.h  gbx_c_file.c  gbx_c_file.h  gbx_c_gambas.c  gbx_c_gambas.h  gbx_c_observer.c  gbx_c_observer.h  gbx_c_process.c  gbx_c_process.h  gbx_c_string.c  (+97 more)
main/lib/: Makefile.am
main/lib/clipper/: c_clipper.cpp  c_clipper.h  main.cpp  main.h
main/lib/complex/: ccomplex.c  ccomplex.h  main.c
main/lib/compress/: gb.compress.component
main/lib/data/: c_avltree.c  c_graph.c  c_graph.h  c_list.c  string_compare.h
main/lib/db/: CConnection.c  CConnection.h  CDatabase.c  CDatabase.h  CField.c  CField.h  CIndex.c  CIndex.h  CResult.c  CResult.h  CResultField.c  CResultField.h  CTable.c  CTable.h  CUser.c  CUser.h  c_subcollection.c  c_subcollection.h  deletemap.c  (+8 more)
main/share/: gambas.h  gb_alloc.h  gb_alloc_temp.h  gb_arch.h  gb_arch_temp.h  gb_array.h  gb_array_temp.h  gb_buffer.h  gb_buffer_temp.h  gb_class_desc_common.h  gb_code.h  gb_code_temp.h  gb_common.h  gb_common_buffer.h  gb_common_buffer_temp.h  gb_common_case.h  gb_common_case_temp.h  gb_common_string.h  gb_common_string_temp.h  gb_common_swap.h  gb_common_swap_temp.h  gb_component.h  gb_error_common.h  gb_file_share.h  gb_file_temp.h  gb_hash.h  gb_hash_temp.h  gb_limit.h  gb_list.h  gb_list_temp.h  gb_magic.h  gb_overflow.h  gb_pcode.h  gb_pcode_temp.h  gb_replace.h  gb_replace_temp.h  gb_reserved.h  gb_reserved_keyword.h  gb_reserved_temp.h  gb_system.h  (+8 more)
(+1202 files in other folders)
