dnl ---- configure.ac for gb.form.htmlview
m4_include([../version.m4])
AC_INIT([gambas3-gb-form-htmlview],[GB_VERSION],[GB_MAIL],[],[GB_URL])
AC_CONFIG_MACRO_DIR([m4])
GB_INIT(gb.form.htmlview)
LT_INIT
GB_COMPONENT(
  htmlview,
  HTMLVIEW,
  gb.form.htmlview,
  [src],
  [],
  [],
  [],
  [])
AC_CONFIG_FILES([Makefile src/Makefile ])
AC_OUTPUT
GB_PRINT_MESSAGES
